<resources>

    <string name="app_name">Taxi App</string>

    <string name="about_text">This is Material Design Taxi App template, this app use dummy data not related with any backend
    \n\nImage source :
        \n<a href="www.pexels.com">www.pexels.com</a>
        \n<a href="www.pixabay.com">www.pixabay.com</a>
    </string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDdBRhiRuBWIR1FUXXXXXXXXXXXXXX
    </string>

    <string name="found_driver_msg">We found you a driver, \nenjoy your ride!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--menu title-->
    <string name="title_booking">Booking</string>
    <string name="title_notification">Notification</string>
    <string name="title_payment">Payment</string>
    <string name="title_coupon">Coupon</string>
    <string name="title_help">Help Center</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

</resources>
